tests/machine/x/ocaml/group_by_sort.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_sort.ml", line 21, characters 47-50:
21 | type record1 = { mutable cat : string; mutable val : int }
                                                    ^^^
Error: Syntax error


Context (around line 21):
  19 | type ('k,'v) group = { key : 'k; items : 'v list }
  20 | 
  21 | type record1 = { mutable cat : string; mutable val : int }
  22 | type record2 = { mutable cat : Obj.t; mutable total : float }
  23 | 
